[B][COLOR red]Update - v3.287 - Oct 19, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed TVShow search results due to trakt api response duplicating
    shows with "None" type years, similar for Movies.[/I]
[COLOR yellow]--[/COLOR][I] Changed Trakt OnDeck to follow intedended shortened version of
    "Unfinished" list, per docs.[/I]
[COLOR yellow]--[/COLOR][I] Added resolution icons for source directory list, note not all skins support
    this and may not be seen.[/I]
[COLOR yellow]--[/COLOR][I] Changed default sort for TVShows Calendar sorting to "Date Premiered".[/I]
[COLOR yellow]--[/COLOR][I] Added "season.poster" fallback when not available.[/I]

[B][COLOR red]Update - v3.2.7 - Oct 16, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added more api languages in settings.[/I]
[COLOR yellow]--[/COLOR][I] Added more provider languages in settings.[/I]
[COLOR yellow]--[/COLOR][I] Changed episode "poster" to ""season.poster" to be
    more descriptive of the season you are viewing.[/I]
[COLOR yellow]--[/COLOR][I] Changed TMDb threading to "for" loop thread for 2nd
    api request and fanart.tv request.  Huge speed bump in menu load times.[/I]
[COLOR yellow]--[/COLOR][I] Some tweaks to TMDb user list sorting.[/I]
[COLOR yellow]--[/COLOR][I] TMDb has now fixed user lists from dropping titles due to a lang issue.
    Thank you Travis!!![/I]

[B][COLOR red]Update - v3.2.6 - Oct 12, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added more Navigation options to now cover most all.[/I]
[COLOR yellow]--[/COLOR][I] Changed IMDb lists from local sort method to server request sorting.  This allows
    "Date Added" for IMDb lists to now work.[/I]
[COLOR yellow]--[/COLOR][I] Moved "My List" to Navigation settings.[/I]
[COLOR yellow]--[/COLOR][I] Hard coded "Movie-Collections" sort order to release_date.asc. In the event user
    changes Movie sort to "Title" or "Date Added" this made more sense to keep a