@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.2.8" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.2.9" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -36,15 +36,10 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.287 - Oct 19, 2019[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed TVShow search results due to trakt api response duplicating
-    shows with "None" type years, similar for Movies.[/I]
-[COLOR yellow]--[/COLOR][I] Changed Trakt OnDeck to follow intedended shortened version of
-    "Unfinished" list, per docs.[/I]
-[COLOR yellow]--[/COLOR][I] Added resolution icons for source directory list, note not all skins support
-    this and may not be seen.[/I]
-[COLOR yellow]--[/COLOR][I] Changed default sort for TVShows Calendar sorting to "Date Premiered".[/I]
-[COLOR yellow]--[/COLOR][I] Added "season.poster" fallback when not available.[/I]
+[B][COLOR red]Update - v3.2.9 - Oct 21, 2019[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed My TV Shows-Unfinished being empty if no imdb account entered.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed My TV Shows-Trakt On Deck menu missing if no imdb account entered.[/I]
+[COLOR yellow]--[/COLOR][I] Added Trakt On Deck to My Movies.[/I]
 		</news>
 	</extension>
 </addon>
